--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
+certifi==2021.10.8
 click==8.1.2
+cloudinary==1.29.0
 Flask==2.1.1
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
+psycopg2==2.9.3
 psycopg2-binary==2.9.3
+six==1.16.0
 SQLAlchemy==1.4.35
+tk==0.1.0
+urllib3==1.26.9
 Werkzeug==2.1.1
+wtf==0.1
+WTForms==3.0.1
